[gd_scene load_steps=4 format=3 uid="uid://crh55wx3d22ph"]

[ext_resource type="Script" uid="uid://c81xqkk8ie1qb" path="res://player_selection.gd" id="1_icves"]
[ext_resource type="AudioStream" uid="uid://cae3k4j0ximp5" path="res://audio/switch3.ogg" id="2_tf1hx"]
[ext_resource type="PackedScene" uid="uid://hm4tuawag23b" path="res://selections/fighter_selection_base.tscn" id="3_tf1hx"]

[node name="MenuSelezionaGiocatore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icves")

[node name="Titolo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -210.5
offset_bottom = -155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Select your Fighter"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 212.0
offset_top = 235.0
offset_right = -214.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
text = "Confirm selection"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tf1hx")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -94.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
columns = 3

[node name="Fighter01" parent="GridContainer" groups=["player_selection"] instance=ExtResource("3_tf1hx")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
PlaneType = "Green"
HeroKey = "verde"

[node name="Fighter02" parent="GridContainer" groups=["player_selection"] instance=ExtResource("3_tf1hx")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
Name = "Blue Thunder"
PlaneType = "Blue"
HeroKey = "blue"

[node name="Fighter03" parent="GridContainer" groups=["player_selection"] instance=ExtResource("3_tf1hx")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
Name = "Red Bomb"
PlaneType = "Red"
HeroKey = "rosso"

[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
